--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
         <title>wrandifan</title>   
         <meta name="description" content="wrandifan page">
         <link rel="shortcut icon" type="image/png" href="tempicon.png">
-        <link href="https://noccu.art" rel="canonical">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
@@ -16,11 +15,14 @@
                 <div class="plat video" id="twitch">
                     <a class="platlink" href="//twitch.tv/wrandifan" target="_top">Twitch</a>
                 </div>
-                
+                <div class="plat" id="discord"> -->
+                    <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">Discord</a> -->
+                </div> -->
+
                 <hr>
 
-                <!-- <div class="plat" id="ask"> -->
-                    <!-- <a class="platlink" href="//ask.fm/noccu" target="_top">ask.fm</a> -->
+                <!-- <div class="platform" id="platform name"> -->
+                    <!-- <a class="platlink" href="link" target="_top">platform name</a> -->
                 <!-- </div> -->
             </section>
         </main>
