--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div class="plat video" id="twitch">
                     <a class="platlink" href="//twitch.tv/wrandifan" target="_top">Twitch</a>
                 </div>
-                <div class="plat" id="discord"> -->
+                <div class="plat" id="discord">
                     <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">Discord</a> -->
-                </div> -->
+                </div>
 
                 <hr>
 
