--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a class="platlink" href="//twitch.tv/wrandifan" target="_top">Twitch</a>
                 </div>
                 <div class="plat" id="discord">
-                    <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">Discord</a> -->
+                    <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">Discord</a>
                 </div>
 
                 <hr>
