--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>wrandifan</title>   
         <meta name="description" content="wrandifan page">
         <link rel="shortcut icon" type="image/png" href="tempicon.png">
+        <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
