--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <div class="plat" id="discord">
                     <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">Discord</a>
                 </div>
-
+                 <div class="plat" id="linkedin">
+                    <a class="platlink" href="//linkedin.com/in/phanrandy/" target="_top">LinkedIn</a>
+                </div>
                 <hr>
 
                 <!-- <div class="platform" id="platform name"> -->
