--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>wrandifan</title>   
         <meta name="description" content="wrandifan page">
         <link rel="shortcut icon" type="image/png" href="tempicon.png">
-        <link rel="stylesheet" type="text/css" href="style.css" href='https://fonts.googleapis.com/css?family=Advent Pro'>
+        <link rel="stylesheet" type="text/css" href="style.css" >
+        <href='https://fonts.googleapis.com/css?family=Comfortaa'?
     </head>
 
     <body>
