--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="description" content="wrandifan page">
         <link rel="shortcut icon" type="image/png" href="tempicon.png">
         <link rel="stylesheet" type="text/css" href="style.css" >
-        <href='https://fonts.googleapis.com/css?family=Comfortaa'?
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     </head>
 
     <body>
