--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <body>
         <main>
             <section id="content">
+                <div class="plat" id="aboutme">
+                    <a class="platlink" href="/aboutme" target="_top">AboutMe</a>
+                </div>
+                <hr>
                 <div class="plat" id="twitter">
                     <a class="platlink" href="//twitter.com/wrandifan" target="_top">Twitter</a>
                 </div>
