--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -1,1 +1,8 @@
-
+<html lang="en">
+    <head>
+        <title>about me</title>   
+        <meta name="description" content="wrandifan page">
+        <link rel="shortcut icon" type="image/png" href="tempicon.png">
+        <link rel="stylesheet" type="text/css" href="style.css" >
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    </head>
