--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -1,8 +1,14 @@
 <html lang="en">
     <head>
         <title>about me</title>   
-        <meta name="description" content="wrandifan page">
+        <meta name="description" content="about wrandifan">
         <link rel="shortcut icon" type="image/png" href="tempicon.png">
         <link rel="stylesheet" type="text/css" href="style.css" >
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     </head>
+
+     <body>
+        <main>
+            <p> hello </p>
+        </main>
+    </body>
