--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                  <div class="plat" id="linkedin">
                     <a class="platlink" href="//linkedin.com/in/phanrandy/" target="_top">LinkedIn</a>
                 </div>
+                <div class="plat" id="github">
+                    <a class="platlink" href="..github.com/wrandifan" target="_top">GitHub</a>
+                </div>
                 <hr>
 
                 <!-- <div class="platform" id="platform name"> -->
