--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="platlink" href="//linkedin.com/in/phanrandy/" target="_top">LinkedIn</a>
                 </div>
                 <div class="plat" id="github">
-                    <a class="platlink" href="..github.com/wrandifan" target="_top">GitHub</a>
+                    <a class="platlink" href="//github.com/wrandifan" target="_top">GitHub</a>
                 </div>
                 <hr>
 
