--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@
 
      <body>
         <main>
+            <img src="Despairge.png" alt="Despairge" >
             <p> hello </p>
         </main>
     </body>
