--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 
      <body>
         <main>
-            <img src="Despairge.png" alt="Despairge" >
+            <img src="Despairge.png" alt="Despairge" width="500" height="500" >
             <p> hello </p>
         </main>
     </body>
