--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" >
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     </head>
-
+    <img src="Despairge.png" alt="Despairge" width="500" height="500" class="center" >
     <body>
         <main>
             <section id="content">
