--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,15 @@
+<html lang="en">
+    <head>
+        <title>Resume</title>   
+        <meta name="description" content="resume">
+        <link rel="shortcut icon" type="image/png" href="tempicon.png">
+        <link rel="stylesheet" type="text/css" href="style.css" >
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    </head>
 
+     <body>
+        <main>
+            <img src="Despairge.png" alt="Despairge" width="500" height="500" >
+            <p> hello </p>
+        </main>
+    </body>
