--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
                 <div class="plat" id="aboutme">
                     <a class="platlink" href="/aboutme" target="_top">About Me</a>
                 </div>
+                <div class="plat" id="resume">
+                    <a class="platlink" href="/resume" target="_top">Resume</a>
+                </div>
                 <hr>
                 <div class="plat" id="twitter">
                     <a class="platlink" href="//twitter.com/wrandifan" target="_top">Twitter</a>
