--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>wrandifan</title>   
         <meta name="description" content="wrandifan page">
-        <link rel="shortcut icon" type="image/png" href="tempicon.png">
+        <link rel="shortcut icon" type="image/png" href="pxArt.png">
         <link rel="stylesheet" type="text/css" href="style.css" >
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     </head>
