--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>wrandifan</title>
-            </section>
-        </main>
-    </body>
+<meta charset="UTF-8">
+<title>wrandifan</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="">
+<style>
+</style>
+<script src=""></script>
+<body>
+
+<img src="img_la.jpg" alt="LA" style="width:100%">
+
+<div class="">
+ <h1>welcome</h1>
+ <p>this website is under construction</p>
+ <p>please be patient</p>
+</div>
+
+</body>
 </html>
+
