--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <title>wrandifan</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
-<style>
+<link rel="icon" href=pxArt.png type="image/x-icon">
 </style>
 <script src=""></script>
 <body>
-
-<img src="img_la.jpg" alt="LA" style="width:100%">
 
 <div class="">
  <h1>welcome</h1>
