--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </style>
 <script src=""></script>
 <body>
+    <div class="bg-image"></div>
 
+    <div class="bg-text">
+      <h1>I am John Doe</h1>
+      <p>And I'm a Photographer</p>
+    </div>
 <div class="">
  <h1>welcome</h1>
  <p>this website is under construction</p>
