--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="bg-image"></div>
 
     <div class="bg-text">
-      <h1>I am John Doe</h1>
-      <p>And I'm a Photographer</p>
+      <h1>dink donk</h1>
+      <p>kachow</p>
     </div>
 <div class="">
  <h1>welcome</h1>
