--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <title>wrandifan</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="icon" href=pxArt.png type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="style.css">
 </style>
- <h1>welcome</h1>
- <p>this website is under construction</p>
- <p>please be patient</p>
-</div>
-</body>
-</html>
+<main>
+    <div class="section" id="twitter">
+        <a class="sectionlink" href="http://twitter.com/wrandifan"
+    </div>
+</main>
 
