--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 <link rel="icon" href=pxArt.png type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="style.css">
 </style>
-<main>
-    <div class="section" id="twitter">
-        <a class="sectionlink" href="http://twitter.com/wrandifan"
-    </div>
+<body>
+    <main>
+        <div class="section" id="twitter">
+         <a class="sectionlink" href="http://twitter.com/wrandifan">   
+         </a>
 </main>
+</body>
 
