--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </style>
 <body>
     <main>
-        <div class="section" id="twitter">
-         <a class="sectionlink" href="http://twitter.com/wrandifan">   
-         </a>
-</main>
-</body>
-
+        <section id="content">
+            <div class="section" id="twitter">
+                <a class="sectionlink" href="http://twitter.com/wrandifan" target="_top" data-hydrus="DONE">Twitter</a>
+            </div>
+        </section>
+    </main>
+</body></html>    
