--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 <body>
     <main>
         <section id="content">
-            <div class="section" id="twitter">
-                <a class="sectionlink" href="http://twitter.com/wrandifan" target="_top" data-hydrus="DONE">Twitter</a>
+            <div class="section" id="About Me">
+                <a class="sectionlink" href="socials.html" target="_top" data-hydrus="DONE">About Me</a>
+            </div>
+            <div class="section" id="Socials">
+                <a class="sectionlink" href="socials.html" target="_top" data-hydrus="DONE">socials</a>
+            </div>
+            <div class="section" id="Games">
+                <a class="sectionlink" href="games.html" target="_top" data-hydrus="DONE">Games</a>
+            </div>
+            <div class="section" id="Trackers">
+                <a class="sectionlink" href="trackers.html" target="_top" data-hydrus="DONE">Trackers</a>
             </div>
         </section>
     </main>
