--- a/index.html
+++ b/index.html
@@ -4,4 +4,19 @@
 <title>wrandifan</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="icon" href=pxArt.png type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="sylesheet" type="text/css" href="style.css">
+
+<body>
+    <div class="thename">
+        <nav>
+            <h2 class="logo">Wrandifan</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Socials</a></li>
+                <li><a href="#">Contact Me</a></li>
+            </ul>
+        </nav>
+
+    </div>
+</body>
