--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
+<head>
 <title>wrandifan</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="icon" href=pxArt.png type="image/x-icon">
 <link rel="sylesheet" type="text/css" href="style.css">
 
+</head>
 <body>
     <div class="thename">
         <nav>
