--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<head>
-<title>wrandifan</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="icon" href=pxArt.png type="image/x-icon">
-<link rel="sylesheet" type="text/css" href="style.css">
+    <head>
+        <title>wrandifan</title>   
+        <link rel="icon" href=pxArt.png type="image/x-icon">
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
 
-</head>
-<body>
-    <div class="thename">
-        <nav>
-            <h2 class="logo">Wrandifan</h2>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Socials</a></li>
-                <li><a href="#">Contact Me</a></li>
-            </ul>
-        </nav>
-
-    </div>
-</body>
+    <body>
+        <main>
+            <section id="content">
+                <div class="plat video" id="twitch">
+                    <a class="platlink" href="//twitch.tv/wrandifan" target="_top">Twitch</a>
+                </div>
+                <!-- <div class="plat" id="ask"> -->
+                    <!-- <a class="platlink" href="//ask.fm/noccu" target="_top">ask.fm</a> -->
+                <!-- </div> -->
+            </section>
+        </main>
+    </body>
 </html>
