wip - header navbar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
+    <header>
+        <div class="container"></div>
+    </header>
     <body>
         <main>
             <section id="content">
