--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 
     <header>
         <div class="container"></div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Gacha Games</li>
+                    <li>Streaming</li>
+                    <li>Anime</li>
+                    <li>And More!</li>
+                </ul>
+            </nav>
     </header>
     <body>
         <main>
