revert to old version of site

--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
-        <title>about me</title>   
-        <meta name="description" content="about wrandifan">
+        <title>Resume</title>   
+        <meta name="description" content="resume">
         <link rel="shortcut icon" type="image/png" href="tempicon.png">
         <link rel="stylesheet" type="text/css" href="style.css" >
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
