--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>wrandifan</title>   
 
         <meta name="description" content="wrandifan page">
+        <meta name="cf-2fa-verify" content="Bjm1S12F1dGiGAVVZwAQ">
         <link rel="shortcut icon" type="image/png" href="pxArt.png">
         <link rel="stylesheet" type="text/css" href="style.css" >
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
