changed links on webpage

--- a/index.html
+++ b/index.html
@@ -14,12 +14,7 @@
     <body>
         <main>
             <section id="content">
-                <div class="plat" id="aboutme">
-                    <a class="platlink" href="/aboutme" target="_top">About Me</a>
-                </div>
-                <div class="plat" id="resume">
-                    <a class="platlink" href="/resume" target="_top">Resume</a>
-                </div>
+        
                 <hr>
                 <div class="plat" id="twitter">
                     <a class="platlink" href="//twitter.com/wrandifan" target="_top">Twitter</a>
@@ -27,15 +22,14 @@
                 <div class="plat video" id="twitch">
                     <a class="platlink" href="//twitch.tv/wrandifan" target="_top">Twitch</a>
                 </div>
+                <div class="plat" id="anilist">
+                    <a class="platlink" href="//anilist.co/user/wrandifan/" target="_top">Twitter</a>
+                </div>
+                <div class="plat" id="last.fm">
+                    <a class="platlink" href="//last.fm/user/wrandifan" target="_top">Twitter</a>
+                </div>
                 <div class="plat" id="discord">
                     <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">Discord</a>
-                </div>
-                 <div class="plat" id="linkedin">
-                    <a class="platlink" href="//linkedin.com/in/phanrandy/" target="_top">LinkedIn</a>
-                </div>
-                <div class="plat" id="github">
-                    <a class="platlink" href="//github.com/wrandifan" target="_top">GitHub</a>
-                </div>
                 <hr>
 
                 <!-- <div class="platform" id="platform name"> -->
