--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <a class="platlink" href="//twitch.tv/wrandifan" target="_top">Twitch</a>
                 </div>
                 <div class="plat" id="anilist">
-                    <a class="platlink" href="//anilist.co/user/wrandifan/" target="_top">Twitter</a>
+                    <a class="platlink" href="//anilist.co/user/wrandifan/" target="_top">anilist</a>
                 </div>
                 <div class="plat" id="last.fm">
-                    <a class="platlink" href="//last.fm/user/wrandifan" target="_top">Twitter</a>
+                    <a class="platlink" href="//last.fm/user/wrandifan" target="_top">last.fm</a>
                 </div>
                 <div class="plat" id="discord">
                     <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">Discord</a>
