cahnge font + lowercase

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <meta name="cf-2fa-verify" content="Bjm1S12F1dGiGAVVZwAQ">
         <link rel="shortcut icon" type="image/png" href="pxArt.png">
         <link rel="stylesheet" type="text/css" href="style.css" >
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
         <link rel="icon" href=pxArt.png type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="style.css">  
         
@@ -17,10 +19,10 @@
         
                 <hr>
                 <div class="plat" id="twitter">
-                    <a class="platlink" href="//twitter.com/wrandifan" target="_top">Twitter</a>
+                    <a class="platlink" href="//twitter.com/wrandifan" target="_top">twitter</a>
                 </div>
                 <div class="plat video" id="twitch">
-                    <a class="platlink" href="//twitch.tv/wrandifan" target="_top">Twitch</a>
+                    <a class="platlink" href="//twitch.tv/wrandifan" target="_top">twitch</a>
                 </div>
                 <div class="plat" id="anilist">
                     <a class="platlink" href="//anilist.co/user/wrandifan/" target="_top">anilist</a>
@@ -29,7 +31,7 @@
                     <a class="platlink" href="//last.fm/user/wrandifan" target="_top">last.fm</a>
                 </div>
                 <div class="plat" id="discord">
-                    <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">Discord</a>
+                    <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">discord</a>
                 <hr>
 
                 <!-- <div class="platform" id="platform name"> -->
