parallax add test1

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </head>
     <body>
         <main>
+            <div class="parallax"></div>
             <section id="content">
         
                 <hr>
@@ -38,6 +39,7 @@
                     <!-- <a class="platlink" href="link" target="_top">platform name</a> -->
                 <!-- </div> -->
             </section>
+            <div class="parallax"></div>
         </main>
     </body>
 </html>
