bkg to gacha and fixed mainpage

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <div class="plat" id="discord">
           <a class="platlink" href="//discord.gg/5UB2gWBXqt" target="_top">discord</a>
+        </div>
           <div class="plat" id="gacha">
             <a class="platlink" href="/gacha.html" target="_top">gacha</a>
         </div>
