--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" >
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     </head>
-
+    <div class="parallax"></div>
      <body>
         <main>
             <img src="Despairge.png" alt="Despairge" width="500" height="500" >
