--- a/gacha.html
+++ b/gacha.html
@@ -11,7 +11,9 @@
     <link rel="icon" href=pxArt.png type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+
   <body>
+    <div class="parallax"></div>
     <main>
         <p> friend ids </p>
         <p>blue archive (jp) -  BFVNBGLB</p>
@@ -21,4 +23,5 @@
         <p></p>
         <p></p>
     </main>
+    <div class="parallax"></div>
   </body>
