--- a/gacha.html
+++ b/gacha.html
@@ -15,13 +15,11 @@
   <body>
     <div class="parallax"></div>
     <main>
-        <p> friend ids </p>
-        <p>blue archive (jp) -  BFVNBGLB</p>
-        <p>umamusume -  823144264</p>
-        <p>arknights - wrandi#3605</p>
-        <p></p>
-        <p></p>
-        <p></p>
-    </main>
+      <ul class="gachablock" >
+      <li><span>gacha friend ids</span></li>
+      <li><span>blue archive (jp) - BFVNBGLB</span></li>
+      <li><span>umamusu - 823144264</span></li>
+      <li><span>arknights - wrandi#3605</span></li>
+      </ul>
     <div class="parallax"></div>
   </body>
