--- a/gacha.html
+++ b/gacha.html
@@ -21,5 +21,5 @@
       <li><span>umamusu - 823144264</span></li>
       <li><span>arknights - wrandi#3605</span></li>
       </ul>
-    <div class="parallax"></div>
+      </main>
   </body>
