--- a/gacha.html
+++ b/gacha.html
@@ -16,14 +16,10 @@
     <main>
       <ul class="sitemap">
         <li>+</li>
-        <li><span>hello there,</span></li>
-        <li><span>i'm not sure what i'm doing</span></li>
-        <li><span>but stay as long as you like</span></li>
-        <li><span>and maybe we'll find out together.</span></li>
-        <li>+</li>
-        <li><span>about</span></li>
-        <li><span>photography</span></li>
-        <li><span>entries</span></li>
+        <li><span>gacha friend ids</span></li>
+        <li><span>blue archive (jp) - BFVNBGLB</span></li>
+        <li><span>umamusu - 823144264</span></li>
+        <li><span>arknights - wrandi#3605</span></li>
       </ul>
     </main>
   </body>
