--- a/gacha.html
+++ b/gacha.html
@@ -14,7 +14,7 @@
   <div class="parallax"></div>
   <body>
     <main>
-      <ul class="sitemap">
+      <ul class="gblock">
         <li>+</li>
         <li><span>gacha friend ids</span></li>
         <li><span>blue archive (jp) - BFVNBGLB</span></li>
