god please work

--- a/gacha.html
+++ b/gacha.html
@@ -11,14 +11,17 @@
     <link rel="icon" href=pxArt.png type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <div class="parallax"></div>
   <body>
+    <div class="parallax"></div>
     <main>
-      <ul class="gblock">
-        <li><span>gacha friend ids</span></li>
-        <li><span>blue archive (jp) - BFVNBGLB</span></li>
-        <li><span>umamusu - 823144264</span></li>
-        <li><span>arknights - wrandi#3605</span></li> 
-      </ul>
+      <div class="gachaids">
+        <h1>gacha friend id</h1>
+        <ul>
+          <li><a href="#">blue archive (jp) - BFVNBGLB</a></li>
+          <li><a href="#">umamusu - 823144264</a></li>
+          <li><a href="#">arknights - wrandi#3605</a></li> 
+        </ul>
+      </div>
     </main>
   </body>
+  </html>
