--- a/gacha.html
+++ b/gacha.html
@@ -15,11 +15,11 @@
     <div class="parallax"></div>
     <main>
       <div class="gachaids">
-        <h1>gacha friend id</h1>
+        <h1>gacha friend ids</h1>
         <ul>
-          <li><a href="#">blue archive (jp) - BFVNBGLB</a></li>
-          <li><a href="#">umamusu - 823144264</a></li>
-          <li><a href="#">arknights - wrandi#3605</a></li> 
+          <li>blue archive (jp) - BFVNBGLB</li>
+          <li>umamusu - 823144264</li>
+          <li>arknights - wrandi#3605</li> 
         </ul>
       </div>
     </main>
