--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           <div class="plat" id="gacha">
             <a class="platlink" href="/gacha.html" target="_top">gacha</a>
         </div>
+        <div class="plat" id="blog">
+          <a class="platlink" href="//blog.wrandifan.club" target="_top">view my blog here</a>
+        </div>
       </section>
     </main>
   
