--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="platlink" href="/gacha.html" target="_top">gacha</a>
         </div>
         <div class="plat" id="blog">
-          <a class="platlink" href="//blog.wrandifan.club" target="_top">view my blog here</a>
+          <a class="platlink" href="//blog.wrandifan.club" target="_top">blog</a>
         </div>
       </section>
     </main>
