--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html lang="en">
   <head>
     <title>wrandifan</title>
-
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="wrandifan page">
     <meta name="cf-2fa-verify" content="Bjm1S12F1dGiGAVVZwAQ">
     <link rel="shortcut icon" type="image/png" href="pxArt.png">
