--- a/music.html
+++ b/music.html
@@ -16,6 +16,7 @@
             <div class="album-container">
                 <!-- <img class="album-cover" src="path/to/album1.webp" alt="Album Name"> -->
                 <img class="album-cover" src="albumcovers/organic call - sunao ni narenai.png" alt="organic call - sunao ni narenai.">
+                <img class="album-cover" src="albumcovers/necchi - abyss feat such.png" alt="necchi - abyss feat. such.">
             </div>
         </div>
     </main>
